--- a/.env
+++ b/.env
@@ -23,6 +23,10 @@ APP_SECRET=34fbbac6232b636d7fb7c34de63c2ad7
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
+###> the_knowledge/serverName ###
+SERVER_DOMAIN=https://localhost:8000
+###< the_knowledge/serverName ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
