Ajout des fonctionnalites -Publication des articles -Integration de Fos fos_ckeditor -Integration de fm_elfinder
A suivre:
- Integration de l'index des articles
- Modification et suppression des articles
- Validation des articles

Note: Certaines images au format png ne sont pas gerer par liip_imagine bundle.
Penser a fixer ce bug dans les versions suivantes.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@
 /public/media/cache/
 ###< liip/imagine-bundle ###
 
-###> liip/imagine-bundle ###
-/node_modules/
-###< liip/imagine-bundle ###
+###> node ###
+/node_modules
+###< node ###
+
+###> public/images ###
+/public/images/
+###< public/images ###
