--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "doctrine/orm": "^2.13",
         "easycorp/easyadmin-bundle": "^4.4",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
-        "liip/imagine-bundle": "^2.8",
+        "helios-ag/fm-elfinder-bundle": "^12.2",
+        "liip/imagine-bundle": "^2.10",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
         "sensio/framework-extra-bundle": "^6.1",
@@ -83,7 +84,8 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "ckeditor:install": "symfony-cmd"
+            "ckeditor:install": "symfony-cmd",
+            "elfinder:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
