--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -4,27 +4,17 @@ liip_imagine:
     driver: "gd"
     twig:
         mode: lazy
+    default_filter_set_settings:
+        format: webp
+    webp:
+        generate: true
+    filter_sets :
+        profile_image_navbar :
+            quality : 75
+            filters :
+                thumbnail  : { size : [120, 120], mode : outbound }
 
-    # configure resolvers
-    resolvers:
-        default:
-            web_path:
-                web_root: "%kernel.project_dir%/public"
-                cache_prefix: "media/cache"
-
-    filter_sets:
         profile_image_page:
-            quality: 75
-            filters:
-                thumbnail: { size: [ 150, 150 ], mode: outbound }
-
-        profile_image_navbar:
-            quality: 75
-            filters:
-                thumbnail: { size: [ 28, 28 ], mode: outbound }
-
-#        profile_image_common:
-#            quality: 75
-#            filter:
-#                thumbnail:
-#                    size: []
+            quality : 75
+            filters :
+                thumbnail  : { size : [120, 120], mode : outbound }
