--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -10,3 +10,8 @@ vich_uploader:
             upload_destination: '%kernel.project_dir%/public/images/user/profile'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
             delete_on_update: false
+        posts:
+            uri_prefix: /images/post/banner
+            upload_destination: '%kernel.project_dir%/public/images/post/banner'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            delete_on_update: false
