Commit du 20230313_2214 1. Index des articles, activation, suppression, modification et details mis a jour (+ Gestion des droits d'acces - Moderateur, Admin, SuperAdmin)  A suivre  1. Pagination  2. Recherche

--- a/.env
+++ b/.env
@@ -46,3 +46,8 @@ SERVER_DOMAIN=https://localhost:8000
 ###> symfony/mailer ###
  MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> acseo/typesense-bundle ###
+TYPESENSE_URL=http://localhost:8108
+TYPESENSE_KEY=xyz
+###< acseo/typesense-bundle ###
