--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -18,3 +18,23 @@ liip_imagine:
             quality : 75
             filters :
                 thumbnail  : { size : [120, 120], mode : outbound }
+
+        post_banner:
+            quality: 100
+            filters:
+                thumbnail  : { size : [640, 480], mode : outbound }
+
+        post_edit:
+            quality: 100
+            filters:
+                thumbnail  : { size : [214, 120], mode : outbound }
+
+        post_thumbnail:
+            quality: 100
+            filters:
+                thumbnail  : { size : [107, 60], mode : outbound }
+
+        blog_banner:
+            quality: 75
+            filters:
+                thumbnail  : { size : [960, 240], mode : outbound }
