--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,14 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    posts_images_directory: '%kernel.project_dir%/public/images/post/banner'
+    users_images_directory: '%kernel.project_dir%/public/images/user/profile'
 
 services:
-    # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -22,6 +24,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Controller\Admin\PostController:
+        arguments:
+            $postFinder: '@typesense.finder.posts'
 
 
     App\EventSubscriber\RegistrationSubscriber:
